deploy: 4a07ca8e91e8813712e410b2908829fbcc8fa95a

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="img-box">
 
                         
-                        <img src="/assets/images/posts/LOGO-01-2.png" alt="">
+                        <img src="/assets/images/posts/newWallet.jpg" alt="">
                         
                     </div>
                     <div class="detail-box">
@@ -149,7 +149,7 @@ XDAG new version of wallet (0.4.0) officially released
 The new version of XDAG wallet (0.4.0) has been officially released. 
 XDAG’s community members can try to download 0.4.0 wallet. 0.4.0 the wallet has been adjusted in terms of design style, adding functions such as QR code, transfer address record, conditional searching transfer details, improving compatibility and user experience.
 
-download link: [https://github.com/XDagger/goXdagWallet/releases/tag/0.4.0]
+download link: https://github.com/XDagger/goXdagWallet/releases/tag/0.4.0
 
                         </p>
                         <div class="news_info">
