deploy: bc30ce3d25c9bf9c777fd0ecbb7e368a90b494e6

--- a/index.html
+++ b/index.html
@@ -146,8 +146,22 @@
 
 XDAG new version of wallet (0.4.0) officially released
 
+
+
 The new version of XDAG wallet (0.4.0) has been officially released. 
 XDAG’s community members can try to download 0.4.0 wallet. 0.4.0 the wallet has been adjusted in terms of design style, adding functions such as QR code, transfer address record, conditional searching transfer details, improving compatibility and user experience.
+
+XDAG’s community members can try to download 0.4.0 wallet with this link : https://github.com/XDagger/goXdagWallet/releases
+0.4.0 the wallet has been adjusted in terms of design style, adding functions such as QR code, transfer address record,
+conditional searching transfer details, improving compatibility and user experience.
+
+This wallet have been developed by one of our long time supporter and developers Swordlet.
+Community rewarded him 150000 XDAG for this good work, feel free to tip him on his adress to encourage him : 2muaPxu3kgDQX0MFzQEul3/7VLdnFay8
+
+Bug bounty
+
+If you find a bug, please visit[https://github.com/XDagger/goXdagWallet/issues/new/choose]
+Submit a bug and leave your XDAG address. After we review, we will reward 1000XDAG to this address if a bug is found.
 
 download link: https://github.com/XDagger/goXdagWallet/releases/tag/0.4.0
 
